# eurofxref-analytics

./: README.md  devbox.json  extract.py  main.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  gh-pages.yml  playwright.yml
dashboard/: evidence.config.yaml  package-lock.json  package.json  playwright.config.js
dashboard/e2e/: dashboard.spec.js
dashboard/pages/: +layout.svelte  index.md
dashboard/sources/eurofxref/: connection.yaml  int_fx_rates_cleaned.sql  mart_fx_latest.sql  monthly_history.sql
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: mart_fx_latest.sql  mart_fx_latest.yml
dbt/models/staging/: stg_fx_rates.sql  stg_fx_rates.yml
dbt/tests/: assert_rates_are_positive.sql
models/marts/: mart_fx_latest.sql  mart_fx_latest.yml
models/staging/: stg_fx_rates.sql  stg_fx_rates.yml
notebooks/: Untitled-1.ipynb
tests/: test_extract.py
